Updated to the implementation in the new version of Minecraft 1.20.5.